repair responsive home content

--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
               ">
               <!-- <img src="assets/image/1.jpg" alt="" srcset="" />g -->
               <div class="content">
-                <h3>the shadow of eminance season 2</h3>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Itaque accusantium dicta cum dolor voluptate illum error,
-                  perspiciatis quae corporis assumenda mollitia quod voluptas
-                  iure repudiandae eius eaque recusandae deleniti voluptates.
+                <h3 class="cutoff-text">the shadow of eminance season 2</h3>
+                <p class="p-cutoff-text">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
+                  non quod autem voluptate modi accusamus dolores sequi eos,
+                  placeat et veritatis ab amet voluptates corporis? Voluptatibus
+                  doloribus libero alias praesentium!
                 </p>
                 <div class="mb-3">
                   <a href="download.html" class="btn">Download</a>
@@ -69,12 +69,12 @@
               ">
               <!-- <img src="assets/image/2.jpg" alt="" srcset="" />g -->
               <div class="content">
-                <h3>mushoku tensei season 2</h3>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Itaque accusantium dicta cum dolor voluptate illum error,
-                  perspiciatis quae corporis assumenda mollitia quod voluptas
-                  iure repudiandae eius eaque recusandae deleniti voluptates.
+                <h3 class="cutoff-text">mushoku tensei season 2</h3>
+                <p class="p-cutoff-text">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Exercitationem ad non obcaecati magnam sapiente distinctio
+                  animi officiis commodi, qui soluta optio, rem architecto
+                  doloremque voluptatem ipsa quia inventore, velit doloribus.
                 </p>
                 <div class="mb-3"><a href="#" class="btn">Download</a></div>
               </div>
@@ -89,12 +89,12 @@
               ">
               <!-- <img src="assets/image/3.jpg" alt="" srcset="" /> -->
               <div class="content">
-                <h3>overlord holy kingdom</h3>
-                <p>
+                <h3 class="cutoff-text">overlord holy kingdom</h3>
+                <p class="p-cutoff-text">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Itaque accusantium dicta cum dolor voluptate illum error,
-                  perspiciatis quae corporis assumenda mollitia quod voluptas
-                  iure repudiandae eius eaque recusandae deleniti voluptates.
+                  Dolores mollitia nobis atque nostrum. Similique blanditiis
+                  quas veritatis atque natus, sunt ad neque pariatur adipisci
+                  exercitationem cum animi, harum, nostrum voluptates.
                 </p>
                 <div class="mb-3"><a href="#" class="btn">Download</a></div>
               </div>
